--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="CatchOneBus : CatchOneBus for Pebble">
-    <link rel="bus_icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
+    <link rel="bus_icon" href="images/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>CatchOneBus</title>
@@ -51,7 +51,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
