--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>CatchOneBus</title>
-    <link rel="icon" href="https://github.com/fluidicon.png" title="GitHub">
+    <link rel="icon" href="https://github.com/fluidicon.png" title="CatchOneBus">
   </head>
 
   <body>
