--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="CatchOneBus : CatchOneBus for Pebble">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <link rel="icon" href="images/favicon-16x16.png" title="CatchOneBus">
+    <link rel="bus-icon" href="images/favicon-16x16.png" title="CatchOneBus">
     <title>CatchOneBus</title>
 
   </head>
